apps/bitwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bitwarden
  name: bitwarden-svc
spec:
  type: ClusterIP
  ports:
    - name: bitwarden
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: bitwarden
