apps/bitwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitwarden-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: selfsigned
spec:
  tls:
    - hosts:
      - bitwarden.home.net
      - home-bitwarden.dynv6.net
      secretName: bitwarden-tls-cert
  rules:
    - host: bitwarden.home.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bitwarden-svc
                port:
                  number: 80
    - host: home-bitwarden.dynv6.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bitwarden-svc
                port:
                  number: 80
